--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "monokai-iterm"]
-	path = monokai-iterm
-	url = https://github.com/dawnerd/monokai-iterm.git
+[submodule "base16-iterm2"]
+	path = base16-iterm2
+	url = https://github.com/chriskempson/base16-iterm2.git
