--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "base16-iterm2"]
-	path = base16-iterm2
+[submodule "iterm2/base16-iterm2"]
+	path = iterm2/base16-iterm2
 	url = https://github.com/chriskempson/base16-iterm2.git
