--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,12 @@
 [submodule "iterm2/base16-iterm2"]
 	path = iterm2/base16-iterm2
 	url = https://github.com/chriskempson/base16-iterm2.git
+[submodule "vim/plugins/base16-vim"]
+	path = vim/plugins/base16-vim
+	url = https://github.com/chriskempson/base16-vim.git
+[submodule "vim/plugins/vim-airline"]
+	path = vim/plugins/vim-airline
+	url = https://github.com/bling/vim-airline.git
+[submodule "vim/plugins/vim-surround"]
+	path = vim/plugins/vim-surround
+	url = https://github.com/tpope/vim-surround.git
