Add vim-commentary plugin

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "vim/plugins/vim-surround"]
 	path = vim/plugins/vim-surround
 	url = https://github.com/tpope/vim-surround.git
+[submodule "vim/plugins/vim-commentary"]
+	path = vim/plugins/vim-commentary
+	url = https://github.com/tpope/vim-commentary.git
