--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,18 @@
 [submodule "vim/plugins/vim-commentary"]
 	path = vim/plugins/vim-commentary
 	url = https://github.com/tpope/vim-commentary.git
+[submodule "vim/plugins/vim-pathogen"]
+	path = vim/plugins/vim-pathogen
+	url = git://github.com/tpope/vim-pathogen.git
+[submodule "vim/plugins/ack.vim"]
+	path = vim/plugins/ack.vim
+	url = https://github.com/mileszs/ack.vim.git
+[submodule "vim/plugins/vim-rails"]
+	path = vim/plugins/vim-rails
+	url = https://github.com/tpope/vim-rails.git
+[submodule "vim/plugins/syntastic"]
+	path = vim/plugins/syntastic
+	url = https://github.com/scrooloose/syntastic.git
+[submodule "vim/plugins/vim-haml"]
+	path = vim/plugins/vim-haml
+	url = https://github.com/tpope/vim-haml.git
