--- a/.gitmodules
+++ b/.gitmodules
@@ -40,3 +40,6 @@
 [submodule "osx/osx-for-hackers"]
 	path = osx/osx-for-hackers
 	url = git@gist.github.com:/f4abb7072475c4c96047.git
+[submodule "vim/plugins/ag"]
+	path = vim/plugins/ag
+	url = https://github.com/rking/ag.vim
