--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -997,11 +997,13 @@
 	<key>NSTableView Sort Ordering KeyBingingTable</key>
 	<array/>
 	<key>NSWindow Frame Preferences</key>
-	<string>-1618 -296 924 485 -2560 -640 2560 1440 </string>
+	<string>205 106 605 485 0 0 1280 778 </string>
+	<key>NSWindow Frame UKCrashReporter</key>
+	<string>80 193 592 584 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>-2556 -630 2548 1408 -2560 -640 2560 1418 </string>
+	<string>-1274 -634 1270 1406 -2560 -640 2560 1417 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
-	<string>-1280 274 730 526 -2560 -640 2560 1440 </string>
+	<string>-1278 -628 1270 1406 -2560 -640 2560 1418 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
 	<string>-1280 -628 1279 1406 -2560 -640 2560 1418 </string>
 	<key>New Bookmarks</key>
@@ -1805,7 +1807,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2014-08-25T21:24:50Z</date>
+	<date>2014-10-30T20:33:49Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>ShowBookmarkName</key>
@@ -1828,6 +1830,8 @@
 	<integer>10</integer>
 	<key>TripleClickSelectsFullWrappedLines</key>
 	<false/>
+	<key>UKCrashReporterLastCrashReportDate</key>
+	<real>1413923584</real>
 	<key>URLHandlersByGuid</key>
 	<dict/>
 	<key>UseBorder</key>
@@ -1839,7 +1843,7 @@
 	<key>WebKitDefaultFontSize</key>
 	<integer>11</integer>
 	<key>WebKitStandardFont</key>
-	<string>Lucida Grande</string>
+	<string>.Helvetica Neue DeskInterface</string>
 	<key>WindowNumber</key>
 	<true/>
 	<key>WindowStyle</key>
