--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "vim/plugins/vim-eunuch"]
 	path = vim/plugins/vim-eunuch
 	url = https://github.com/tpope/vim-eunuch.git
+[submodule "vim/plugins/ctrlp.vim"]
+	path = vim/plugins/ctrlp.vim
+	url = https://github.com/kien/ctrlp.vim.git
