--- a/ruby/bundler-config/config
+++ b/ruby/bundler-config/config
@@ -1,6 +1,6 @@
 ---
-BUNDLE_GEM__COC: 'false'
-BUNDLE_GEM__MIT: 'false'
-BUNDLE_GEM__TEST: rspec
+BUNDLE_GEM__COC: "false"
+BUNDLE_GEM__MIT: "false"
+BUNDLE_GEM__TEST: "rspec"
 BUNDLE_BUILD__LIBV8: "--with-system-v8"
-BUNDLE_JOBS: '4'
+BUNDLE_JOBS: "4"
