--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,6 @@
 set -g mouse on
+set -g set-clipboard on
+
 
 
 # make scrolling with wheels work
@@ -8,13 +10,13 @@ bind -n WheelDownPane select-pane -t= \; send-keys -M
 # Increase scrollback
 set -g history-limit 50000
 
+set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
+
 # Vim mode
 setw -g mode-keys vi
 
-# Setup 'v' to begin selection as in Vim
-bind-key -T copy-mode-vi v send-keys -X begin-selection
-bind-key -T copy-mode-vi y send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @plugin 'tmux-plugins/tmux-battery'
 
-# Update default binding of `Enter` to also use copy-pipe
-unbind -T copy-mode-vi Enter
-bind-key -T copy-mode-vi Enter send-keys -X copy-pipe "reattach-to-user-namespace pbcopy"
+run -b '~/.tmux/plugins/tpm/tpm'
