Add tmux configuration

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -15,6 +15,36 @@ set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percen
 # Vim mode
 setw -g mode-keys vi
 
+# set first window to index 1 (not 0) to map more to the keyboard layout
+set -g base-index 1
+set -g pane-base-index 1
+
+# pass through xterm keys
+set -g xterm-keys on
+
+unbind t
+unbind C-t
+bind-key t new-window
+bind-key C-t new-window
+
+# Ctrl - w or w to kill panes
+unbind w
+unbind C-w
+bind-key w kill-pane
+bind-key C-w kill-pane
+
+# C + control q to kill session
+unbind q
+unbind C-q
+bind-key q kill-session
+bind-key C-q kill-session
+
+# Switching panes with alt
+bind -n M-Left select-pane -L
+bind -n M-Right select-pane -R
+bind -n M-Up select-pane -U
+bind -n M-Down select-pane -D
+
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-battery'
