--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,7 +1,6 @@
 set -g mouse on
+set -g @yank_selection_mouse 'clipboard'
 set -g set-clipboard on
-
-
 
 # make scrolling with wheels work
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
@@ -10,10 +9,7 @@ bind -n WheelDownPane select-pane -t= \; send-keys -M
 # Increase scrollback
 set -g history-limit 50000
 
-set -g status-right '#{battery_status_bg} Batt: #{battery_icon} #{battery_percentage} #{battery_remain} | %a %h-%d %H:%M '
-
-# Vim mode
-setw -g mode-keys vi
+set -g status-right '#{prefix_highlight} | %a %h-%d %H:%M '
 
 # set first window to index 1 (not 0) to map more to the keyboard layout
 set -g base-index 1
@@ -47,6 +43,11 @@ bind -n M-Down select-pane -D
 
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
-set -g @plugin 'tmux-plugins/tmux-battery'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'tmux-plugins/tmux-open'
 
 run -b '~/.tmux/plugins/tpm/tpm'
+
+setw -g mode-keys vi
