Adjust tmux to play nicely with Hyper.js theme

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -18,9 +18,14 @@ set -g pane-base-index 1
 # pass through xterm keys
 set -g xterm-keys on
 
+# Theming
+set -g default-terminal "xterm-256color"
+set -g status-style "bg=colour0"
+
 unbind t
 unbind C-t
 bind-key t new-window
+bind c new-window -c "#{pane_current_path}"
 bind-key C-t new-window
 
 # Ctrl - w or w to kill panes
@@ -50,4 +55,5 @@ set -g @plugin 'tmux-plugins/tmux-open'
 
 run -b '~/.tmux/plugins/tpm/tpm'
 
-setw -g mode-keys vi
+bind-key -T copy-mode-vi WheelUpPane send -N1 -X scroll-up
+bind-key -T copy-mode-vi WheelDownPane send -N1 -X scroll-down
