--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -47,7 +47,7 @@
     "editor.cursorWidth": 3,
     "editor.cursorBlinking": "solid",
     "files.trimTrailingWhitespace": true,
-    "editor.lineNumbers": "on",
+    "editor.lineNumbers": "relative",
     "[python]": {
         "editor.formatOnSave": true,
         "editor.formatOnPaste": true,
@@ -67,5 +67,7 @@
     "editor.insertSpaces": false,
     "editor.wordSeparators": "/\\()\"':,.;<>~!@#$%^&*|+=[]{}`?-",
     "editor.wordWrap": "off",
-    "redhat.telemetry.enabled": false
+    "redhat.telemetry.enabled": false,
+    "workbench.editor.enablePreview": false,
+    "editor.minimap.enabled": false
 }
